<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp">

        <TextView
            android:id="@+id/tvTitulo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ocorrencia"
            android:textColor="@color/colorPrimaryText"
            android:textStyle="bold"
            android:textSize="22sp"/>

        <TextView
            android:id="@+id/tvNumeroNota"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@+id/tvTitulo"
            android:layout_marginStart="10dp"
            android:paddingTop="6dp"
            android:textSize="16sp"/>
    </RelativeLayout>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/motivo_ocorrencia"
        android:textSize="13sp"/>

    <Spinner
        android:id="@+id/sTipoOcorrencia"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="60dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="10dp"
        android:text="@string/detalhes_ocorrencia"
        android:textSize="14sp"/>

    <EditText
        android:id="@+id/etDetalhes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:textSize="18sp"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/bCancelar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toStartOf="@+id/bConfirmar"
            android:background="@android:color/transparent"
            android:layout_marginEnd="10dp"
            android:textColor="?attr/colorPrimaryDark"
            android:text="@string/cancelar" />

        <Button
            android:id="@+id/bConfirmar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:background="@android:color/transparent"
            android:textColor="?attr/colorPrimaryDark"
            android:text="@string/confirmar" />
    </RelativeLayout>
</LinearLayout>