<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/quant_volume"
        android:textStyle="bold"
        android:textSize="@dimen/text_size_subtitulo"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/ibMenos"
            android:layout_height="match_parent"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:padding="8dp"
            android:contentDescription="@string/vazio"
            android:background="@null"
            android:src="@drawable/ic_remove_circle_black"
            android:adjustViewBounds="true"
            android:focusable="true"
            android:clickable="true"
            android:scaleType="fitCenter"/>

        <EditText
            android:id="@+id/etQuantidade"
            android:layout_height="match_parent"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:textSize="22sp"
            android:inputType="number"
            android:textAlignment="center" />

        <ImageButton
            android:id="@+id/ibMais"
            android:layout_height="match_parent"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:padding="8dp"
            android:contentDescription="@string/vazio"
            android:background="@null"
            android:src="@drawable/ic_add_circle_black"
            android:adjustViewBounds="true"
            android:focusable="true"
            android:clickable="true"
            android:scaleType="fitCenter"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">

        <Button
            android:id="@+id/bCancela"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:layout_marginEnd="10dp"
            android:textColor="?attr/colorPrimaryDark"
            android:text="@string/nota_concelar" />

        <Button
            android:id="@+id/bConfirma"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:layout_marginEnd="10dp"
            android:textColor="?attr/colorPrimaryDark"
            android:text="@string/nota_confirmar" />
    </LinearLayout>
</LinearLayout>