<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/tools"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="br.com.shoebiz.shoeconf_2.fragment.ColetaGtinFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/frag_cg_codigo_produto"/>

        <EditText
            android:id="@+id/etCodigoProduto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:textSize="20sp"
            android:maxLines="1"
            android:lines="1"
            android:inputType="text"
            card_view:ignore="LabelFor" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/frag_cg_codigo_gtin"/>

        <EditText
            android:id="@+id/etCodigoGtin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:enabled="false"
            android:textSize="20sp"
            android:maxLines="1"
            android:lines="1"
            android:inputType="text"
            card_view:ignore="LabelFor" />

        <Button
            android:id="@+id/bLimpar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:text="@string/frag_cg_limpar"
            android:visibility="gone"
            android:textColor="#ffffff"
            android:background="?attr/colorPrimary"/>

        <Button
            android:id="@+id/bGravar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:text="@string/frag_cg_gravar"
            android:visibility="gone"
            android:textColor="#ffffff"
            android:background="?attr/colorPrimary"/>

        <androidx.cardview.widget.CardView
            android:id="@+id/cvInformacoes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:cardElevation="3dp"
            app:cardPreventCornerOverlap="false"
            app:cardUseCompatPadding="false"
            card_view:cardCornerRadius="2dp"
            card_view:cardElevation="6dp">

            <androidx.core.widget.NestedScrollView
                android:id="@+id/nscInfoProduto"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scrollbars="vertical"
                app:layout_behavior="@string/appbar_scrolling_view_behavior">

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:paddingTop="16dp"
                    android:paddingStart="16dp"
                    android:paddingEnd="16dp"
                    android:paddingBottom="8dp"
                    tools:ignore="UselessParent">

                    <TextView
                        android:id="@+id/tvInformacoes"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        android:text="@string/frag_cg_info_produto"/>

                    <View
                        android:id="@+id/vDividerInfo"
                        android:layout_below="@id/tvInformacoes"
                        android:layout_width="match_parent"
                        android:layout_marginBottom="8dp"
                        android:layout_height="0.7dp"
                        android:background="@color/cardview_shadow_start_color"
                        card_view:ignore="PrivateResource" />

                    <TextView
                        android:id="@+id/tvTxtDescricao"
                        android:layout_below="@id/vDividerInfo"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:textSize="14sp"
                        android:textStyle="bold"
                        android:text="@string/frag_cg_descricao"/>

                    <TextView
                        android:id="@+id/tvDescricao"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp"
                        android:layout_marginTop="5dp"
                        android:layout_below="@id/vDividerInfo"
                        android:layout_toEndOf="@+id/tvTxtDescricao"
                        android:maxLines="1"
                        android:textSize="14sp" />

                    <ImageView
                        android:id="@+id/ivFotoProduto"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_centerHorizontal="true"
                        android:layout_below="@+id/tvTxtDescricao"
                        android:contentDescription="@string/vazio" />
                </RelativeLayout>
            </androidx.core.widget.NestedScrollView>
        </androidx.cardview.widget.CardView>
    </LinearLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>